// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar inserts extra buttons into the toolbar 1`] = `
<div>
  <Navbar
    className="toolbar_l6n5rs"
    expand="md"
    light={true}
    tag="nav"
  >
    <div
      className="filterBox_1kzbnzj"
    >
      <FilterBox
        handleNavFilter={[MockFunction]}
      />
    </div>
    <Collapse
      appear={false}
      className="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      navbar={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Nav
        className="ml-auto"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <NavItem
          key="reset-button"
          tag="li"
        >
          <div
            className="buttonsBar_13xq1v"
          >
            <FontAwesomeIcon
              border={false}
              className="toolbarButton_z1gq62"
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    640,
                    512,
                    Array [],
                    "f55a",
                    "M576 64H205.26A63.97 63.97 0 0 0 160 82.75L9.37 233.37c-12.5 12.5-12.5 32.76 0 45.25L160 429.25c12 12 28.28 18.75 45.25 18.75H576c35.35 0 64-28.65 64-64V128c0-35.35-28.65-64-64-64zm-84.69 254.06c6.25 6.25 6.25 16.38 0 22.63l-22.62 22.62c-6.25 6.25-16.38 6.25-22.63 0L384 301.25l-62.06 62.06c-6.25 6.25-16.38 6.25-22.63 0l-22.62-22.62c-6.25-6.25-6.25-16.38 0-22.63L338.75 256l-62.06-62.06c-6.25-6.25-6.25-16.38 0-22.63l22.62-22.62c6.25-6.25 16.38-6.25 22.63 0L384 210.75l62.06-62.06c6.25-6.25 16.38-6.25 22.63 0l22.62 22.62c6.25 6.25 6.25 16.38 0 22.63L429.25 256l62.06 62.06z",
                  ],
                  "iconName": "backspace",
                  "prefix": "fas",
                }
              }
              inverse={false}
              key="toolbar-reset"
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title="Reset state"
              transform={null}
            />
          </div>
        </NavItem>
        <InfoButton />
        <FilterButton
          filter="all"
          filterOnClick={[Function]}
          toolbarStyle="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
        />
        <PrintButton />
        <TagsButton
          toggleTagsDisplay={[Function]}
        />
        <HelpButton
          toggleHelpOnClick={[Function]}
        />
        <DocumentationButton />
      </Nav>
    </Collapse>
  </Navbar>
  <Modal
    autoFocus={true}
    backdrop={true}
    backdropTransition={
      Object {
        "mountOnEnter": true,
        "timeout": 150,
      }
    }
    centered={false}
    className="HelpModal"
    fade={true}
    isOpen={false}
    keyboard={true}
    modalTransition={
      Object {
        "timeout": 300,
      }
    }
    onClosed={[Function]}
    onOpened={[Function]}
    role="dialog"
    toggle={[Function]}
    zIndex={1050}
  >
    <ModalHeader
      closeAriaLabel="Close"
      tag="h5"
      toggle={[Function]}
      wrapTag="div"
    >
      Help
    </ModalHeader>
    <ModalBody
      tag="div"
    >
      This is filter box help!
    </ModalBody>
    <ModalFooter
      tag="div"
    >
      <Button
        color="light"
        onClick={[Function]}
        tag="button"
      >
        Close
      </Button>
    </ModalFooter>
  </Modal>
  <Modal
    autoFocus={true}
    backdrop={true}
    backdropTransition={
      Object {
        "mountOnEnter": true,
        "timeout": 150,
      }
    }
    centered={false}
    className="infoModal"
    fade={true}
    isOpen={false}
    keyboard={true}
    modalTransition={
      Object {
        "timeout": 300,
      }
    }
    onClosed={[Function]}
    onOpened={[Function]}
    role="dialog"
    size="lg"
    toggle={[Function]}
    zIndex={1050}
  >
    <ModalHeader
      closeAriaLabel="Close"
      tag="h5"
      toggle={[Function]}
      wrapTag="div"
    >
      Information
    </ModalHeader>
    <ModalBody
      tag="div"
    >
      No information to display.
    </ModalBody>
    <ModalFooter
      tag="div"
    >
      <Button
        color="light"
        onClick={[Function]}
        tag="button"
      >
        Close
      </Button>
    </ModalFooter>
  </Modal>
</div>
`;

exports[`Toolbar shallow renders the correct HTML structure for batch mode 1`] = `
<div>
  <Navbar
    className="toolbar_l6n5rs"
    expand="md"
    light={true}
    tag="nav"
  >
    <div
      className="filterBox_1kzbnzj"
    >
      <FilterBox
        handleNavFilter={[MockFunction]}
      />
    </div>
    <Collapse
      appear={false}
      className="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      navbar={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Nav
        className="ml-auto"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <InfoButton />
        <FilterButton
          filter="all"
          filterOnClick={[Function]}
          toolbarStyle="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
        />
        <PrintButton />
        <TagsButton
          toggleTagsDisplay={[Function]}
        />
        <HelpButton
          toggleHelpOnClick={[Function]}
        />
        <DocumentationButton />
      </Nav>
    </Collapse>
  </Navbar>
  <Modal
    autoFocus={true}
    backdrop={true}
    backdropTransition={
      Object {
        "mountOnEnter": true,
        "timeout": 150,
      }
    }
    centered={false}
    className="HelpModal"
    fade={true}
    isOpen={false}
    keyboard={true}
    modalTransition={
      Object {
        "timeout": 300,
      }
    }
    onClosed={[Function]}
    onOpened={[Function]}
    role="dialog"
    toggle={[Function]}
    zIndex={1050}
  >
    <ModalHeader
      closeAriaLabel="Close"
      tag="h5"
      toggle={[Function]}
      wrapTag="div"
    >
      Help
    </ModalHeader>
    <ModalBody
      tag="div"
    >
      This is filter box help!
    </ModalBody>
    <ModalFooter
      tag="div"
    >
      <Button
        color="light"
        onClick={[Function]}
        tag="button"
      >
        Close
      </Button>
    </ModalFooter>
  </Modal>
  <Modal
    autoFocus={true}
    backdrop={true}
    backdropTransition={
      Object {
        "mountOnEnter": true,
        "timeout": 150,
      }
    }
    centered={false}
    className="infoModal"
    fade={true}
    isOpen={false}
    keyboard={true}
    modalTransition={
      Object {
        "timeout": 300,
      }
    }
    onClosed={[Function]}
    onOpened={[Function]}
    role="dialog"
    size="lg"
    toggle={[Function]}
    zIndex={1050}
  >
    <ModalHeader
      closeAriaLabel="Close"
      tag="h5"
      toggle={[Function]}
      wrapTag="div"
    >
      Information
    </ModalHeader>
    <ModalBody
      tag="div"
    >
      No information to display.
    </ModalBody>
    <ModalFooter
      tag="div"
    >
      <Button
        color="light"
        onClick={[Function]}
        tag="button"
      >
        Close
      </Button>
    </ModalFooter>
  </Modal>
</div>
`;

exports[`Toolbar shallow renders the correct HTML structure for interactive mode 1`] = `
<div>
  <Navbar
    className="toolbar_l6n5rs"
    expand="md"
    light={true}
    tag="nav"
  >
    <div
      className="filterBox_1kzbnzj"
    >
      <FilterBox
        handleNavFilter={[MockFunction]}
      />
    </div>
    <Collapse
      appear={false}
      className="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      navbar={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Nav
        className="ml-auto"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <InfoButton />
        <FilterButton
          filter="all"
          filterOnClick={[Function]}
          toolbarStyle="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
        />
        <PrintButton />
        <TagsButton
          toggleTagsDisplay={[Function]}
        />
        <HelpButton
          toggleHelpOnClick={[Function]}
        />
        <DocumentationButton />
      </Nav>
    </Collapse>
  </Navbar>
  <Modal
    autoFocus={true}
    backdrop={true}
    backdropTransition={
      Object {
        "mountOnEnter": true,
        "timeout": 150,
      }
    }
    centered={false}
    className="HelpModal"
    fade={true}
    isOpen={false}
    keyboard={true}
    modalTransition={
      Object {
        "timeout": 300,
      }
    }
    onClosed={[Function]}
    onOpened={[Function]}
    role="dialog"
    toggle={[Function]}
    zIndex={1050}
  >
    <ModalHeader
      closeAriaLabel="Close"
      tag="h5"
      toggle={[Function]}
      wrapTag="div"
    >
      Help
    </ModalHeader>
    <ModalBody
      tag="div"
    >
      This is filter box help!
    </ModalBody>
    <ModalFooter
      tag="div"
    >
      <Button
        color="light"
        onClick={[Function]}
        tag="button"
      >
        Close
      </Button>
    </ModalFooter>
  </Modal>
  <Modal
    autoFocus={true}
    backdrop={true}
    backdropTransition={
      Object {
        "mountOnEnter": true,
        "timeout": 150,
      }
    }
    centered={false}
    className="infoModal"
    fade={true}
    isOpen={false}
    keyboard={true}
    modalTransition={
      Object {
        "timeout": 300,
      }
    }
    onClosed={[Function]}
    onOpened={[Function]}
    role="dialog"
    size="lg"
    toggle={[Function]}
    zIndex={1050}
  >
    <ModalHeader
      closeAriaLabel="Close"
      tag="h5"
      toggle={[Function]}
      wrapTag="div"
    >
      Information
    </ModalHeader>
    <ModalBody
      tag="div"
    >
      No information to display.
    </ModalBody>
    <ModalFooter
      tag="div"
    >
      <Button
        color="light"
        onClick={[Function]}
        tag="button"
      >
        Close
      </Button>
    </ModalFooter>
  </Modal>
</div>
`;
